--- a/api/.gitignore
+++ b/api/.gitignore
@@ -1,4 +1,30 @@
-node_modules
-.env
+# Dependencies
+node_modules/
+
+# Logs
+logs
 *.log
-.DS_Store
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Testing
+coverage
+
+# Build
+dist
+build
+
+# Package manager
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
