--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --host --port $PORT",
+    "serve": "serve -s dist -l ${PORT:-8080}",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext js,jsx --fix",
     "format": "prettier --write \"src/**/*.{js,jsx,json,css,md}\"",
@@ -20,7 +21,8 @@
     "lucide-react": "^0.548.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recharts": "^3.3.0"
+    "recharts": "^3.3.0",
+    "serve": "^14.2.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.9.1",
