--- a/frontend/railway.toml
+++ b/frontend/railway.toml
@@ -3,6 +3,6 @@ builder = "NIXPACKS"
 buildCommand = "npm install && npm run build"
 
 [deploy]
-startCommand = "npm run preview"
+startCommand = "npm run serve"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
